--- a/Blog-UI/src/styles.css
+++ b/Blog-UI/src/styles.css
@@ -31,3 +31,9 @@ body {
 .btn-danger{
     background-color: rgb(190, 63, 63) !important;
 }
+
+/* Buttons */
+button {
+    border-radius: 20px 0px 20px 0px !important;
+    font-size: 0.9rem;
+}
