creating all blogs and update blog component

--- a/Blog-UI/src/app/Modules/admin/Components/blog-details/blog-details.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blog-details/blog-details.component.html
@@ -15,6 +15,11 @@
                 <p class="text-success"><strong>{{blog.createdAt | date | uppercase}}</strong></p>
             </div>
 
+            <!-- Buttons -->
+            <button class="btn btn-success btn-sm m-1">Archirve</button>
+            <button class="btn btn-primary btn-sm m-1" type="button">Update</button>
+            <button class="btn btn-danger btn-sm m-1" type="button">Delete</button>
+
         </div>
     </div>
 
