creating update form function

--- a/Blog-UI/src/app/Modules/admin/Components/blog-details/blog-details.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blog-details/blog-details.component.html
@@ -15,10 +15,8 @@
                 <p class="text-success"><strong>{{blog.createdAt | date | uppercase}}</strong></p>
             </div>
 
-            <!-- Buttons -->
-            <button class="btn btn-success btn-sm m-1">Archirve</button>
-            <button class="btn btn-primary btn-sm m-1" type="button">Update</button>
-            <button class="btn btn-danger btn-sm m-1" type="button">Delete</button>
+            <!-- Go back button -->
+            <a href="admin/blogs"><button class="btn btn-primary m-3">Go back</button></a>
 
         </div>
     </div>
