--- a/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blogs/blogs.component.html
@@ -36,7 +36,11 @@
                     </p>
                     <p class="text-primary">{{blog.createdAt | date }}</p>
 
-                        <button class="btn btn-primary btn-sm m-1" type="button" (click)="openBlog(blog._id)">Expand</button>
+                    <!-- Buttons -->
+                    <button class="btn btn-primary btn-sm m-1" type="button" (click)="openBlog(blog._id)">Expand</button>
+                    <button class="btn btn-success btn-sm m-1">Archirve</button>
+                    <button class="btn btn-dark btn-sm m-1" type="button" (click)="updateBlog(blog._id)">Update</button>
+                    <button class="btn btn-danger btn-sm m-1" type="button">Delete</button>
                 </ul>
 
             </div>
