--- a/Blog-UI/src/app/Modules/admin/Components/update-blog/update-blog.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/update-blog/update-blog.component.html
@@ -1,1 +1,63 @@
-<p>update-blog works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 my-5 pt-5 mx-auto">
+
+            <!-- Update blog form -->
+            <div class="form">
+
+                <form [formGroup]="updateForm" (ngSubmit)="updateBlog()">
+                
+                    <!-- Image -->
+                    <div class="form-group">
+                        <label for="" class="mb-1 mt-3"><strong>Image</strong></label>
+                        <input type="file" class="form-control" name="image" formControlName="image">
+                    </div>
+                
+                    <!-- Title -->
+                    <div class="form-group">
+                        <label for="" class="mb-1 mt-3"><strong>Title</strong></label>
+                        <input type="text" class="form-control" name="title" formControlName="title">
+                    </div>
+                
+                    <!-- Category -->
+                    <div class="mt-3 mb-1">
+                        <h5 class="mt-3 mb-1 label"><strong>Select category</strong></h5>
+                        <select class="custom-select" (change)="changeCategory($event)" name="category" formControlName="category">
+                            <option *ngFor="let category of categories" [ngValue]="category">{{category}}</option>
+                        </select>
+                    </div>
+                
+                    <!-- Blog body -->
+                    <div class="form-group">
+                        <label for="" class="mb-1 mt-3">Description</label>
+                        <textarea name="" id="" cols="30" rows="5" class="form-control" name="description"
+                            formControlName="description"></textarea>
+                    </div>
+                
+                    <!-- Status -->
+                    <div class="form-group">
+                        <h5 class="mt-3 mb-1"><strong>Select status</strong></h5>
+                        <div class="custom-control custom-radio">
+                            <input id="active" type="radio" class="custom-control-input" value="active" name="status"
+                                formControlName="status">
+                            <label class="custom-control-label" for="active">Active</label>
+                        </div>
+                
+                        <div class="custom-control custom-radio">
+                            <input id="in-active" type="radio" class="custom-control-input" value="in-active" name="status"
+                                formControlName="status">
+                            <label class="custom-control-label" for="in-active">In-active</label>
+                        </div>
+                    </div>
+                
+                    <!-- Buttons -->
+                    <button class="btn btn-primary m-3" type="submit">Post</button>
+                    <button class="btn btn-info m-3">Reset</button>
+                
+                </form>
+
+            </div>
+
+        </div>
+    </div>
+</div>
