--- a/Blog-UI/src/app/Modules/admin/Components/update-blog/update-blog.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/update-blog/update-blog.component.html
@@ -3,6 +3,10 @@
         <div class="col-md-8 my-5 pt-5 mx-auto form">
 
             <!-- Update blog form -->
+            <div class="text-center text-primary">
+                <h3><strong>Update Blog</strong></h3>
+                <hr>
+            </div>
 
                 <form [formGroup]="updateForm" (ngSubmit)="updateBlog()">
                 
@@ -28,14 +32,14 @@
                 
                     <!-- Blog body -->
                     <div class="form-group">
-                        <label for="" class="mb-1 mt-3">Description</label>
+                        <label for="" class="mb-1 mt-3"><strong>Description</strong></label>
                         <textarea name="" id="" cols="30" rows="5" class="form-control" name="description"
                             formControlName="description"></textarea>
                     </div>
                 
                     <!-- Status -->
                     <div class="form-group">
-                        <h5 class="mt-3 mb-1"><strong>Select status</strong></h5>
+                        <h5 class="mt-3 mb-1 label"><strong>Select status</strong></h5>
                         <div class="custom-control custom-radio">
                             <input id="active" type="radio" class="custom-control-input" value="active" name="status"
                                 formControlName="status">
