patching existing values to update form

--- a/Blog-UI/src/app/Modules/admin/Components/update-blog/update-blog.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/update-blog/update-blog.component.html
@@ -4,7 +4,7 @@
 
             <!-- Update blog form -->
             <div class="text-center text-primary">
-                <h3><strong>Update Blog</strong></h3>
+                <h3><strong>Update {{existingBlog.title}} Blog</strong></h3>
                 <hr>
             </div>
 
