--- a/Blog-UI/src/app/Modules/admin/Components/update-blog/update-blog.component.css
+++ b/Blog-UI/src/app/Modules/admin/Components/update-blog/update-blog.component.css
@@ -1,6 +1,8 @@
 .form{
     background-color: white;
     padding: 5%;
+    border-radius: 0px 50px 0px 50px;
+    box-shadow: 0px 0px 20px -10px grey;
 }
 
 label, .label{
