--- a/Blog-UI/src/app/Modules/admin/Components/archirving/archirving.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/archirving/archirving.component.html
@@ -16,6 +16,7 @@
             </div>
 
             <!-- Go back button -->
+            <button class="btn btn-success m-3">Archirve</button>
             <a href="admin/blogs"><button class="btn btn-primary m-3">Go back</button></a>
 
         </div>
