--- a/Blog-UI/src/app/Modules/admin/Components/archirving/archirving.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/archirving/archirving.component.html
@@ -20,19 +20,19 @@
                 <form [formGroup]="archirveForm" (ngSubmit)="archirveBlog()">
                 
                     <!-- Image -->
-                    <div class="form-group">
+                    <div class="form-group d-none">
                         <label for="" class="mb-1 mt-3"><strong>Image</strong></label>
                         <input type="file" class="form-control" name="image" formControlName="image">
                     </div>
                 
                     <!-- Title -->
-                    <div class="form-group">
+                    <div class="form-group d-none">
                         <label for="" class="mb-1 mt-3"><strong>Title</strong></label>
                         <input type="text" class="form-control" name="title" formControlName="title">
                     </div>
                 
                     <!-- Category -->
-                    <div class="mt-3 mb-1">
+                    <div class="mt-3 mb-1 d-none">
                         <h5 class="mt-3 mb-1 label"><strong>Select category</strong></h5>
                         <select class="custom-select" (change)="changeCategory($event)" name="category" formControlName="category">
                             <option *ngFor="let category of categories" [ngValue]="category">{{category}}</option>
@@ -40,14 +40,14 @@
                     </div>
                 
                     <!-- Blog body -->
-                    <div class="form-group">
+                    <div class="form-group d-none">
                         <label for="" class="mb-1 mt-3"><strong>Description</strong></label>
                         <textarea name="" id="" cols="30" rows="5" class="form-control" name="description"
                             formControlName="description"></textarea>
                     </div>
                 
                     <!-- Status -->
-                    <div class="form-group">
+                    <div class="form-group d-none">
                         <h5 class="mt-3 mb-1 label"><strong>Select status</strong></h5>
                         <div class="custom-control custom-radio">
                             <input id="active" type="radio" class="custom-control-input" value="active" name="status"
@@ -61,13 +61,13 @@
                             <label class="custom-control-label" for="in-active">In-active</label>
                         </div>
                     </div>
+
+                    <!-- Go back button -->
+                    <button class="btn btn-success m-3" type="submit">Archirve</button>
+                    <a href="admin/blogs"><button class="btn btn-primary m-3">Go back</button></a>
                 
                 </form>
             </div>
-
-            <!-- Go back button -->
-            <button class="btn btn-success m-3" type="submit">Archirve</button>
-            <a href="admin/blogs"><button class="btn btn-primary m-3">Go back</button></a>
 
         </div>
     </div>
