finishing archirving functionality

--- a/Blog-UI/src/app/Modules/admin/Components/archirving/archirving.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/archirving/archirving.component.html
@@ -63,7 +63,7 @@
                     </div>
 
                     <!-- Go back button -->
-                    <button class="btn btn-success m-3" type="submit">Archirve</button>
+                    <button class="btn btn-success m-3" type="submit" *ngIf="blog.status==='active'">Archirve</button>
                     <a href="admin/blogs"><button class="btn btn-primary m-3">Go back</button></a>
                 
                 </form>
