--- a/Blog-UI/src/app/Modules/admin/Components/all-blogs/all-blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/all-blogs/all-blogs.component.html
@@ -1,1 +1,17 @@
-<p>all-blogs works!</p>
+<div class="container">
+    <div class="row">
+
+        <div class="col-md-3 mx-auto my-5 pt-5" *ngFor="let blog of blogs">
+
+            <h3 class="text-primary"><strong>{{blog.title}}</strong></h3>
+            <p class="status bg-info p-1"><strong>{{blog.status}}</strong></p>
+            <p class="pt-1"><strong>{{blog.description}}</strong></p>
+            <p class="text-success"><strong>{{blog.createdAt | date | uppercase}}</strong></p>
+
+            <!-- Delete button -->
+            <button class="btn btn-danger m-3" type="button"><strong>Delete</strong></button>
+
+        </div>
+
+    </div>
+</div>
