--- a/Blog-UI/src/app/Modules/admin/Components/all-blogs/all-blogs.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/all-blogs/all-blogs.component.html
@@ -19,5 +19,22 @@
 
         </div>
 
+        <!-- Switch panel row -->
+        <div class="row switchPanel">
+            <div class="col-md-6 mx-auto text-center my-3">
+                <h2><strong>Switch Panel</strong></h2>
+                <p>
+                    Use respective buttons below to switch between other admin panels.
+                </p>
+        
+                <!-- Buttons -->
+                <a href="admin/blogs"><button class="btn btn-info m-3">Blogs</button></a>
+                <a href="admin/users"><button class="btn btn-primary m-3"><strong>Users</strong></button></a>
+                <a href="admin/messages"><button class="btn btn-dark m-3">Messages</button></a>
+                <a href="admin/blog-requests"><button class="btn btn-success m-3">Blog Requests</button></a>
+        
+            </div>
+        </div>
+
     </div>
 </div>
