--- a/Blog-UI/src/app/Modules/admin/Components/users/users.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/users/users.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-8 mx-auto pt-3">
+        <div class="col-md-8 mx-auto">
 
             <h3 class="text-success text-center">All Users</h3>
             <hr>
@@ -47,6 +47,37 @@
                 </table>
             </div>
 
+        </div>
+
+        <!-- New users -->
+        <div class="col-md-8 mx-auto pt-5">
+        
+            <h3 class="text-success text-center">New Users</h3>
+            <hr>
+        
+            <div class="allUsers">
+                <!-- Total users -->
+                <div class="total text-success">
+                    <p><strong>Total : {{newUsers.length}} Users</strong></p>
+                </div>
+        
+                <!-- All users table -->
+                <table>
+                    <tr>
+                        <th><strong>First name</strong></th>
+                        <th><strong>Last name</strong></th>
+                        <th><strong>Username</strong></th>
+                        <th><strong>Email</strong></th>
+                    </tr>
+                    <tr *ngFor="let user of newUsers">
+                        <td>{{user.firstname}}</td>
+                        <td>{{user.lastname}}</td>
+                        <td>{{user.username}}</td>
+                        <td>{{user.email}}</td>
+                    </tr>
+                </table>
+            </div>
+        
         </div>
 
     </div>
