--- a/Blog-UI/src/app/Modules/admin/Components/users/users.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/users/users.component.html
@@ -5,7 +5,7 @@
 
             <div class="text-center">
 
-                <h2 class=" text-success">Users panel</h2>
+                <h2 class=" text-success"><strong>Users panel</strong></h2>
                 <hr>
                 <p>
                     These page disclose all about users. It expose all of the information
@@ -16,12 +16,10 @@
             </div>
 
         </div>
-    </div>
 
-    <div class="row">
         <div class="col-md-8 mx-auto">
 
-            <h3 class="text-success text-center">All Users</h3>
+            <h3 class="text-success text-center"><strong>All Users</strong></h3>
             <hr>
 
             <div class="allUsers">
@@ -37,12 +35,16 @@
                         <th><strong>Last name</strong></th>
                         <th><strong>Username</strong></th>
                         <th><strong>Email</strong></th>
+                        <th><strong>Subscription</strong></th>
+                        <th><strong>Join on</strong></th>
                     </tr>
                     <tr *ngFor="let user of allUsers">
                         <td>{{user.firstname}}</td>
                         <td>{{user.lastname}}</td>
                         <td>{{user.username}}</td>
                         <td>{{user.email}}</td>
+                        <td>{{user.subscribe}}</td>
+                        <td>{{user.createdAt | date}}</td>
                     </tr>
                 </table>
             </div>
@@ -52,7 +54,7 @@
         <!-- New users -->
         <div class="col-md-8 mx-auto pt-5">
         
-            <h3 class="text-success text-center">New Users</h3>
+            <h3 class="text-success text-center"><strong>New Users</strong></h3>
             <hr>
         
             <div class="allUsers">
@@ -68,12 +70,16 @@
                         <th><strong>Last name</strong></th>
                         <th><strong>Username</strong></th>
                         <th><strong>Email</strong></th>
+                        <th><strong>Subscription</strong></th>
+                        <th><strong>Join on</strong></th>
                     </tr>
                     <tr *ngFor="let user of newUsers">
                         <td>{{user.firstname}}</td>
                         <td>{{user.lastname}}</td>
                         <td>{{user.username}}</td>
                         <td>{{user.email}}</td>
+                        <td>{{user.subscribe}}</td>
+                        <td>{{user.createdAt | date}}</td>
                     </tr>
                 </table>
             </div>
