styling tables in users panel

--- a/Blog-UI/src/app/Modules/admin/Components/users/users.component.css
+++ b/Blog-UI/src/app/Modules/admin/Components/users/users.component.css
@@ -14,7 +14,7 @@ th,
 td {
     border: 1px solid black;
     border-collapse: collapse;
-    padding: 5px;
+    padding: 0.5rem;
 }
 
 .allUsers {
@@ -27,6 +27,7 @@ td {
 
 table {
     width: 100%;
+    /* height: auto; */
 }
 
 .row{
