--- a/Blog-UI/src/app/Modules/admin/Components/message/message.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/message/message.component.html
@@ -3,7 +3,7 @@
 
         <!-- Top message -->
         <div class="col-md-6 my-5 pt-3 mx-auto text-center">
-            <h3 class="text-success">Messages Admin Panel</h3>
+            <h3 class="text-success"><strong>Messages Admin Panel</strong></h3>
             <hr>
 
             <p>
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col-md-8 mx-auto pt-3">
 
-            <h3 class="text-success text-center">All Messages</h3>
+            <h3 class="text-success text-center"><strong>All Messages</strong></h3>
             <hr>
 
             <div class="allMessages">
@@ -37,14 +37,12 @@
                 <!-- All reviews table -->
                 <table>
                     <tr>
-                        <th><strong>Phone</strong></th>
                         <th><strong>Message</strong></th>
                         <th><strong>Email</strong></th>
                         <th><strong>Date</strong></th>
                         <th><strong>Action</strong></th>
                     </tr>
                     <tr *ngFor="let message of messages">
-                        <td class="text-success"><strong>{{message.phonenumber}}</strong></td>
                         <td>{{message.message}}</td>
                         <td>{{message.email}}</td>
                         <td>{{message.createdAt | date}}</td>
@@ -70,14 +68,12 @@
 
             <table>
                 <tr>
-                    <th><strong>Phone</strong></th>
                     <th><strong>Message</strong></th>
                     <th><strong>Email</strong></th>
                     <th><strong>Date</strong></th>
                     <th><strong>Action</strong></th>
                 </tr>
                 <tr *ngFor="let message of newMessages">
-                    <td class="text-success"><strong>{{message.phonenumber}}</strong></td>
                     <td>{{message.message}}</td>
                     <td>{{message.email}}</td>
                     <td>{{message.createdAt | date}}</td>
@@ -95,7 +91,7 @@
         <!-- switch panel -->
         <div class="col-md-4 mx-auto my-5">
 
-            <h2 class="text-center text-success">Switch Panel</h2>
+            <h2 class="text-center text-success"><strong>Switch Panel</strong></h2>
             <hr>
 
             <div class="buttons my-3 text-center">
