updating switch panel buttons

--- a/Blog-UI/src/app/Modules/admin/Components/message/message.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/message/message.component.html
@@ -89,20 +89,20 @@
 
     <div class="row">
         <!-- switch panel -->
-        <div class="col-md-4 mx-auto my-5">
-
-            <h2 class="text-center text-success"><strong>Switch Panel</strong></h2>
-            <hr>
-
-            <div class="buttons my-3 text-center">
-                <a href="admin/users">
-                    <button class="btn btn-outline-primary m-3"><strong>Users</strong></button>
-                </a>
-                <a href="admin/reviews">
-                    <button class="btn btn-outline-success m-3"><strong>Reviews</strong></button>
-                </a>
+        <div class="row switchPanel">
+            <div class="col-md-6 mx-auto text-center my-3">
+                <h2><strong>Switch Panel</strong></h2>
+                <p>
+                    Use respective buttons below to switch between other admin panels.
+                </p>
+        
+                <!-- Buttons -->
+                <a href="admin/all-blogs"><button class="btn btn-info m-3">All Blogs</button></a>
+                <a href="admin/users"><button class="btn btn-primary m-3"><strong>Users</strong></button></a>
+                <a href="admin/blogs"><button class="btn btn-dark m-3">Blogs</button></a>
+                <a href="admin/blog-requests"><button class="btn btn-success m-3">Blog Requests</button></a>
+        
             </div>
-
         </div>
     </div>
 
