fetching a single message

--- a/Blog-UI/src/app/Modules/admin/Components/message/message.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/message/message.component.html
@@ -58,7 +58,7 @@
         <div class="col-md-8 mx-auto my-lg-5">
 
             <div class="text-center">
-                <h2 class="text-success"><strong>Messages from the last 24 hours</strong></h2>
+                <h2 class="text-success"><strong>New Messages</strong></h2>
                 <hr>
             </div>
 
