displaying new messages

--- a/Blog-UI/src/app/Modules/admin/Components/message-details/message-details.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/message-details/message-details.component.html
@@ -1,1 +1,18 @@
-<p>message-details works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 mx-auto my-5">
+
+            <!-- Displaying single review -->
+            <p><strong><em>{{message.message}}</em></strong></p>
+            <hr>
+            <ul>
+                <li><strong><span class="text-success">Email:</span> </strong><em>{{message.email}}</em></li>
+            </ul>
+
+
+            <!-- Deleting this review -->
+            <!-- <button class="btn btn-danger m3" type="button" (click)="deleteMessage()">Delete</button> -->
+
+        </div>
+    </div>
+</div>
