--- a/Blog-UI/src/app/Modules/admin/Components/message-details/message-details.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/message-details/message-details.component.html
@@ -11,7 +11,7 @@
 
 
             <!-- Deleting this review -->
-            <!-- <button class="btn btn-danger m3" type="button" (click)="deleteMessage()">Delete</button> -->
+            <button class="btn btn-danger m3" type="button" (click)="deleteMessage()">Delete</button>
 
         </div>
     </div>
