styling single blog request display

--- a/Blog-UI/src/app/Modules/admin/Components/blog-requests-details/blog-requests-details.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blog-requests-details/blog-requests-details.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-6 mx-auto my-5 pt-5 pb-5 p-3">
 
             <!-- Displaying request -->
-            <h2 class="text-primary"><strong>Title: {{blogRequest.title}}</strong></h2>
+            <h2 class="text-primary"><strong>{{blogRequest.title}}</strong></h2>
             <hr>
             <p><strong><span class="text-success">The Blog:</span> {{blogRequest.blog}}</strong></p>
             <p><strong><span class="text-success">Owner:</span> {{blogRequest.ownernames}}</strong></p>
