delete blog request functionality

--- a/Blog-UI/src/app/Modules/admin/Components/blog-requests-details/blog-requests-details.component.html
+++ b/Blog-UI/src/app/Modules/admin/Components/blog-requests-details/blog-requests-details.component.html
@@ -13,7 +13,7 @@
 
             <!-- Buttons -->
             <button class="btn btn-primary m-3">Publish</button>
-            <button class="btn btn-danger m-3">Delete</button>
+            <button class="btn btn-danger m-3" type="button" (click)="deleteBlogRequest(blogRequest._id)">Delete</button>
 
         </div>
     </div>
